objects/HS_Corporate_Partner__c.object
<CustomObject>
    <description>HS Corporate Partner Object holds information for Heastarts corporate partners. These records get published to the Headstart website.</description>
    <fields>
        <fullName>Application_Extras__c</fullName>
        <label>Application Extras</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Partner_Description__c</fullName>
        <label>Corporate Partner Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Corporate_Partner__c</fullName>
        <label>Corporate Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Look</fullName>
                </value>
                <value>
                    <fullName>Starbucks</fullName>
                </value>
                <value>
                    <fullName>Lloyds</fullName>
                </value>
                <value>
                    <fullName>Berkeley Group</fullName>
                </value>
                <value>
                    <fullName>Zendesk</fullName>
                </value>
                <value>
                    <fullName>GLA</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>No Corporate Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_1_Preview__c</fullName>
        <formula>image( Image_Link_1__c ,&quot;no Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image 1 Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Link_1__c</fullName>
        <inlineHelpText>Insert link here</inlineHelpText>
        <label>Image Link 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Description__c</fullName>
        <label>Job Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Key_dates_interviews__c</fullName>
        <label>Key dates interviews</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_dates_workshops__c</fullName>
        <label>Key dates workshops</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisional_start_date__c</fullName>
        <label>Provisional start date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_to_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publish to Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Region</label>
        <referenceTo>HS_Region__c</referenceTo>
        <relationshipLabel>HS Corporate Partners</relationshipLabel>
        <relationshipName>HS_Corporate_Partners</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_we_need_from_YP__c</fullName>
        <label>What we need from YP</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>HS Corporate Partner</label>
    <listViews>
        <fullName>All_Corporate_Partners</fullName>
        <columns>NAME</columns>
        <columns>Corporate_Partner__c</columns>
        <columns>Publish_to_Website__c</columns>
        <columns>Region__c</columns>
        <columns>Role_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Corporate Partners</label>
    </listViews>
    <nameField>
        <label>HS Corporate Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HS Corporate Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>